--- a/src/Template/cup/docs/dev/twig.twig
+++ b/src/Template/cup/docs/dev/twig.twig
@@ -42,6 +42,7 @@
                 <li><b>collect(array $array = [])</b> - возвращает коллекцию (<a href="https://github.com/alksily/entity/blob/master/src/Collection.php#L39" target="_blank">src</a>)</li>
                 <li><b>non_page_path()</b> - возвращает текущий путь страницы без указания номера pagination</li>
                 <li><b>is_current_page_number()</b> - сравнивает номер pagination с переданным</li>
+                <li><b>current_query($key = null, $value = null)</b> - вернет текущую строку query, через аргументы можно добавить/изменить одно значение</li>
                 <li><b>current_page_number($number)</b> - возвращает текущий номер pagination</li>
                 <li><b>pushstream_channel($user_uuid)</b> - возвращает канал pushstream для текущего пользователя</li>
                 <li><b>qr_code($value, $width = 256, $height = 256)</b> - возвращает img тег с qr кодом в base64</li>
