--- a/theme/default/catalog.category.product.twig
+++ b/theme/default/catalog.category.product.twig
@@ -3,7 +3,7 @@
         <div class="pi-pic">
             {#<div class="tag-sale">ON SALE</div>#}
             <a href="/{{ parameter('catalog_address', 'catalog') }}/{{ product.address }}">
-                <img src="{{ files.firstWhere('item_uuid', product.uuid).getPublicPath('middle') }}" alt="">
+                <img src="{{ files.firstWhere('item_uuid', product.uuid).getPublicPath('middle') }}" alt="{{ product.title }}">
             </a>
             <div class="pi-links">
                 {# add class item_add to btn #}
