--- a/theme/default/catalog.category.twig
+++ b/theme/default/catalog.category.twig
@@ -77,6 +77,16 @@
                         </div>
                     </div>
 
+                    {% if category.description is not empty %}
+                        <hr class="mt-5 mb-5">
+
+                        <div class="row">
+                            <div class="col-12">
+                                {{ category.description|raw }}
+                            </div>
+                        </div>
+                    {% endif %}
+
                     <hr class="mt-5 mb-5">
 
                     <div class="row">
