--- a/theme/default/main.twig
+++ b/theme/default/main.twig
@@ -4,16 +4,8 @@
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="shortcut icon" />
 
-    <!-- Google Font -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,300i,400,400i,700,700i">
-
+    <style>* { font-display: auto; }</style>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/flaticon.css">
-    <link rel="stylesheet" href="/css/slicknav.min.css">
-    <link rel="stylesheet" href="/css/jquery-ui.min.css">
-    <link rel="stylesheet" href="/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="/css/animate.css">
     <link rel="stylesheet" href="/css/style.css">
 
     <!--[if lt IE 9]>
@@ -43,6 +35,17 @@
             {% include 'common/footer.twig' %}
         {% endblock %}
 
+        <!-- Google Font -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,300i,400,400i,700,700i">
+
+
+        <link rel="stylesheet" href="/css/font-awesome.min.css">
+        <link rel="stylesheet" href="/css/flaticon.css">
+        <link rel="stylesheet" href="/css/slicknav.min.css">
+        <link rel="stylesheet" href="/css/jquery-ui.min.css">
+        <link rel="stylesheet" href="/css/owl.carousel.min.css">
+        <link rel="stylesheet" href="/css/animate.css">
+
         <script src="/js/jquery-3.2.1.min.js"></script>
         <script src="/js/bootstrap.min.js"></script>
         <script src="/js/jquery.slicknav.min.js"></script>
@@ -51,7 +54,6 @@
         <script src="/js/jquery.zoom.min.js"></script>
         <script src="/js/jquery-ui.min.js"></script>
         <script src="/js/main.js"></script>
-        <script src="/assets/js/plugin/simpleCart/simpleCart.min.js"></script>
         <script src="/assets/js/plugin/sweetalert/sweetalert2.all.min.js"></script>
 
         {% include 'mixin/adbd.twig' %}
