--- a/theme/default/products/last-list.twig
+++ b/theme/default/products/last-list.twig
@@ -14,7 +14,7 @@
                 <div class="product-item">
                     <div class="pi-pic">
                         <a href="/{{ parameter('catalog_address', 'catalog') }}/{{ product.address }}" style="text-align: center;">
-                            <img src="{{ files.firstWhere('item_uuid', product.uuid).getPublicPath('middle') }}" style="max-height: 300px; width: auto; object-fit: contain; object-position: center center;" alt="{{ product.title }}">
+                            <img src="{{ files.firstWhere('item_uuid', product.uuid).getPublicPath('middle') }}" style="max-height: 300px; width: 100%; object-fit: contain; object-position: center center;" alt="{{ product.title }}">
                         </a>
                         <div class="pi-links">
                             <a href="#" class="add-card"><i class="flaticon-bag"></i><span>В корзину</span></a>
