--- a/theme/default/common/header.twig
+++ b/theme/default/common/header.twig
@@ -27,7 +27,7 @@
         </div>
     </div>
     <nav class="main-navbar">
-        <div class="container">
+        <div class="container" style="padding-left: 0; padding-right: 0;">
             <!-- menu -->
             <ul class="main-menu">
                 <li><a href="/">Главная</a></li>
