--- a/src/Template/cup/publication/form.twig
+++ b/src/Template/cup/publication/form.twig
@@ -161,11 +161,11 @@
                                             'label': 'Адрес',
                                             'type': 'text',
                                             'name': 'address',
-                                            'prefix': base_url() ~ '/ ... /',
+                                            'prefix': base_url() ~ '/',
                                             'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="Cсылка для просмотра статьи в браузере. Можно оставить пустым, тогда значение будет сгенерировано автоматически. Допустимо использование только латинских символов и цифер без пробелов"></i>',
                                             'args': {
                                                 'value': item.address,
-                                                'placeholder': 'my-awesome-publication',
+                                                'placeholder': 'my-publication',
                                             }
                                         } %}
                                     </div>
