fix html в ответе

--- a/theme/default/guestbook.twig
+++ b/theme/default/guestbook.twig
@@ -46,7 +46,7 @@
 
                                     <div class="alert alert-light">
                                         <p style="margin: 0; padding: 0;">
-                                            <b>Ответ:</b> {{ item.response }}
+                                            <b>Ответ:</b> {{ item.response|nl2br|raw}}
                                         </p>
                                     </div>
                                 </div>
