исправление ссылки на публикацию

--- a/theme/default/publication.short.twig
+++ b/theme/default/publication.short.twig
@@ -2,7 +2,7 @@
 
 <div class="row">
     <article class="publication" data-uuid="{{ item.uuid }}">
-        <h2><a href="/{{ category.address }}/{{ item.address }}">{{ item.title }}</a></h2>
+        <h2><a href="/{{ item.address }}">{{ item.title }}</a></h2>
         <div>
             <ul class="meta">
                 <li>{{ item.date|df }}</li>
