--- a/theme/default/common/footer.twig
+++ b/theme/default/common/footer.twig
@@ -13,7 +13,7 @@
             </div>
             <div class="col-lg-3 col-sm-6">
                 <div class="footer-widget about-widget">
-                    <h2>Вопросы</h2>
+                    <h2>Навигация</h2>
                     <ul>
                         <li><a href="#">О нас</a></li>
                         <li><a href="#">Доставка</a></li>
