--- a/theme/default/products/last-list.twig
+++ b/theme/default/products/last-list.twig
@@ -11,13 +11,13 @@
 
         <div class="product-slider owl-carousel">
             {% for product in products %}
-                <div class="product-item">
+                <div class="product-item" data-catalog-product>
                     <div class="pi-pic">
                         <a href="/{{ parameter('catalog_address', 'catalog') }}/{{ product.address }}" style="text-align: center;">
                             <img src="{{ files.firstWhere('item_uuid', product.uuid).getPublicPath('middle') }}" style="max-height: 300px; width: 100%; object-fit: contain; object-position: center center;" alt="{{ product.title }}">
                         </a>
                         <div class="pi-links">
-                            <a href="#" class="add-card"><i class="flaticon-bag"></i><span>В корзину</span></a>
+                            <a href="javascript:;" class="add-card" data-catalog-product-add><i class="flaticon-bag"></i><span>В корзину</span></a>
                         </div>
                     </div>
                     <div class="pi-text">
@@ -26,6 +26,9 @@
                             <p>{{ product.title }}</p>
                         </a>
                     </div>
+
+                    {# include product options #}
+                    {% include 'catalog.product.options.twig' with {'categories': categories, 'product': product, 'files': files} only %}
                 </div>
             {% endfor %}
         </div>
