--- a/src/Template/cup/guestbook/form.twig
+++ b/src/Template/cup/guestbook/form.twig
@@ -54,7 +54,8 @@
                                     'label': 'Сообщение',
                                     'name': 'message',
                                     'args': {
-                                        'value': item.message
+                                        'value': item.message,
+                                        'text_mode': true
                                     }
                                 } %}
                             </div>
@@ -63,7 +64,8 @@
                                     'label': 'Ответ',
                                     'name': 'response',
                                     'args': {
-                                        'value': item.response
+                                        'value': item.response,
+                                        'text_mode': true
                                     }
                                 } %}
                             </div>
