--- a/src/Template/cup/auth/login.twig
+++ b/src/Template/cup/auth/login.twig
@@ -4,7 +4,7 @@
     <body class="login">
         <div class="wrapper wrapper-login wrapper-login-full p-0">
             <div class="login-aside w-50 d-flex flex-column align-items-center justify-content-center text-center bg-secondary-gradient">
-                <h1 class="title fw-bold text-white mb-3">0x12f</h1>
+                <h1 class="title fw-bold text-white mb-3">WebSpace Engine</h1>
                 <p class="subtitle text-white op-7">Система управления сайтом</p>
             </div>
 
