add rss generator

--- a/src/Template/layout.twig
+++ b/src/Template/layout.twig
@@ -15,6 +15,8 @@
         <meta name="keywords" content="{{ parameter('common_keywords') }}">
         <meta name="canonical" content="{{ parameter('common_homepage') }}">
 
+        <link rel="alternate" type="application/rss+xml" title="{{ parameter('common_title') }}" href="{{ parameter('common_homepage') }}/rss">
+
         {% block head '' %}
         {% block style '' %}
 
