флаг для категорий новостей

--- a/src/Template/cup/docs/dev/structures/publication-category.twig
+++ b/src/Template/cup/docs/dev/structures/publication-category.twig
@@ -52,6 +52,11 @@
                 "description": "Флаг отвечающий за выборку публикаций вложенных категорий",
             },
             {
+                "field": "public",
+                "type": "Boolean",
+                "description": "Флаг отвечающий за выборку категорий в список",
+            },
+            {
                 "field": "sort",
                 "type": "array[by,direction]",
                 "description": "Опрос в публикации",
