--- a/src/Template/cup/docs/dev/twig.twig
+++ b/src/Template/cup/docs/dev/twig.twig
@@ -56,7 +56,7 @@
             <span class="d-block text-muted">(publication functions)</span>
             <ul>
                 <li><b>publication($data = null, $order = [], $limit = 10, $offset = null)</b> - получение списка публикаций (ищет по uuid, address и category)</li>
-                <li><b>publication_category($limit = null)</b> - получение списка категорий публикаций</li>
+                <li><b>publication_category($unique = null)</b> - получение списка категорий публикаций ($unique - uuid родительной категории)</li>
             </ul>
 
             <span class="d-block text-muted">(guestbook functions)</span>
