--- a/src/Template/cup/catalog/product/index.twig
+++ b/src/Template/cup/catalog/product/index.twig
@@ -39,8 +39,7 @@
                         <table data-table class="display table table-striped table-hover" >
                             <thead>
                                 <tr>
-                                    {# поле для сортировки данных в таблице #}
-                                    <th style="display: none"></th>
+                                    <th width="3%">#</th>
                                     <th>Наименование</th>
                                     <th width="10%">Категория</th>
                                     <th>Артикул</th>
@@ -57,8 +56,7 @@
                                 {% for item in products %}
                                     {% set buf = categories.firstWhere('uuid', item.category) %}
                                     <tr>
-                                        {# поле для сортировки данных в таблице #}
-                                        <td style="display: none">{{ item.order }}</td>
+                                        <td class="text-center">{{ item.order }}</td>
                                         <td>
                                             <a href="/{{ parameter('catalog_address', 'catalog') }}/{{ item.address }}" target="_blank">
                                                 {{ item.title }}
