--- a/src/Template/layout.twig
+++ b/src/Template/layout.twig
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <!-- OpenSource CMS (Full free for all) Powered by 0x12f Team -->
-    <!-- Blog: https://t.me/ThreeHundredThree -->
-    <!-- Community: https://t.me/ThreeHundredThreeCommunity -->
-    <!-- Facebook: https://www.facebook.com/ThreeHundredThree -->
+    <!-- OpenSource WebSpace Engine CMS (Full free for all) Powered by 0x12f Team -->
     <!-- GitHub: https://github.com/0x12f -->
 
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="generator" content="OpenSource CMS (Full free for all) Powered by 0x12f Team" />
+        <meta name="generator" content="OpenSource WebSpace Engine CMS (Full free for all) Powered by 0x12f Team" />
 
         <link rel="alternate" type="application/rss+xml" title="{{ parameter('common_title') }}" href="{{ parameter('common_homepage') }}/rss">
 
