--- a/src/Template/cup/user/form.twig
+++ b/src/Template/cup/user/form.twig
@@ -86,6 +86,17 @@
                             </div>
                             <div class="col-md-6">
                                 {% include 'cup/form.twig' with {
+                                    'label': 'Подписан на рассылку',
+                                    'type': 'select',
+                                    'name': 'allow_mail',
+                                    'args': {
+                                        'option': {'yes':'Да', 'no':'Нет'},
+                                        'selected': item.allow_mail ? 'yes' : 'no'
+                                    }
+                                } %}
+                            </div>
+                            <div class="col-md-6">
+                                {% include 'cup/form.twig' with {
                                     'label': 'Телефон',
                                     'type': 'tel',
                                     'name': 'phone',
