--- a/src/Template/cup/navigation.twig
+++ b/src/Template/cup/navigation.twig
@@ -57,6 +57,11 @@
                         </a>
                     </li>
                     <li>
+                        <a href="/cup/user/subscriber">
+                            <span class="sub-item">Подписчики</span>
+                        </a>
+                    </li>
+                    <li>
                         <a href="/cup/user/newsletter">
                             <span class="sub-item">Рассылка</span>
                         </a>
