--- a/src/Template/cup/user/newsletter/form.twig
+++ b/src/Template/cup/user/newsletter/form.twig
@@ -5,7 +5,6 @@
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
                 <h2 class="text-white pb-2 fw-bold">Рассылка сообщений</h2>
-                <h5 class="text-white op-7 mb-2">Массовая отправка сообщений зарегистрированным пользователям</h5>
             </div>
         </div>
     </div>
@@ -18,7 +17,7 @@
                 <form method="post">
                     <div class="card-header">
                         <div class="card-head-row">
-                            <div class="card-title">Письмо</div>
+                            <div class="card-title">Новая рассылка</div>
                         </div>
                     </div>
                     <div class="card-body">
