--- a/src/Template/cup/user/subscriber/index.twig
+++ b/src/Template/cup/user/subscriber/index.twig
@@ -73,6 +73,7 @@
                     {% include 'cup/form.twig' with {
                         'label': 'E-Mail',
                         'type': 'email',
+                        'name': 'email',
                         'args': {
                             'placeholder': 'user@example.com',
                         }
